Finish unsupervised FE

--- a/FeatureExtraction/fe.bib
+++ b/FeatureExtraction/fe.bib
@@ -4,3 +4,32 @@
   publisher    = {CRC Press},
   year 	       = {211},
 }
+
+@book{jolliffe2002principal,
+  title={Principal Component Analysis},
+  author={Jolliffe, I.T.},
+  isbn={9780387954424},
+  lccn={2002019560},
+  series={Springer Series in Statistics},
+  url={https://books.google.fr/books?id=\_olByCrhjwIC},
+  year={2002},
+  publisher={Springer}
+}
+
+@book{manolakis2016hyperspectral,
+  title={Hyperspectral Imaging Remote Sensing: Physics, Sensors, and Algorithms},
+  author={Manolakis, D. and Lockwood, R. and Cooley, T.},
+  isbn={9781316033401},
+  url={https://books.google.fr/books?id=Zeg8DQAAQBAJ},
+  year={2016},
+  publisher={Cambridge University Press}
+}
+@article{fauvel2009kernel,
+  title={Kernel principal component analysis for the classification of hyperspectral remote sensing data over urban areas},
+  author={Fauvel, Mathieu and Chanussot, Jocelyn and Benediktsson, Jon Atli},
+  journal={EURASIP Journal on Advances in Signal Processing},
+  volume={2009},
+  pages={11},
+  year={2009},
+  publisher={Hindawi Publishing Corp.}
+}
